# tensorrt_scatter

./: .gitignore  CMakeLists.txt  README.md
example/: README.md
example/data/: 1542801580448051.npy  1542801580947922.npy  1542801581447784.npy  1542801581947679.npy  1542801582448104.npy  1542801582948519.npy  1542801583398635.npy  1542801583948319.npy  1542801584448148.npy  1542801584948030.npy  1542801585448510.npy  1542801585948327.npy  1542801586448245.npy  1542801586948080.npy  1542801587447967.npy  1542801587898081.npy  1542801588448273.npy  1542801588948138.npy  1542801589448068.npy  1542801589947887.npy
example/exports/: scatter_example.engine  scatter_example.onnx
example/script/: config.yaml  export.py  model.py  symbolic.py
include/: gather_coo.h  gather_csr.h  scatter.h  segment_coo.h  segment_csr.h
include/common/: atomics.cuh  reduction.cuh  reduction.h  utils.cuh
include/plugin/: gather_coo_plugin.h  gather_csr_plugin.h  scatter_plugin.h  segment_coo_plugin.h  segment_csr_plugin.h
src/: gather_coo.cu  gather_csr.cu  scatter.cu  segment_coo.cu  segment_csr.cu
src/plugin/: gather_coo_plugin.cpp  gather_csr_plugin.cpp  scatter_plugin.cpp  segment_coo_plugin.cpp  segment_csr_plugin.cpp
test/: test_gather_coo.py  test_gather_csr.py  test_scatter.py  test_segment_coo.py  test_segment_csr.py  testing.py
